# so_long42

./: .gitignore  CMakeLists.txt  Makefile  so_long  so_long_bonus
bonus/: animation_bonus.c  check_extension_bonus.c  check_map_bonus.c  ft_free_bonus.c  game_init_bonus.c  hook_functions_bonus.c  init_structure_bonus.c  map_draw_bonus.c  open_image_bonus.c  player_movement_bonus.c  show_moves_bonus.c  so_long_bonus.c  so_long_bonus.h  store_map_bonus.c
images/: E.xpm  character.xpm  collectables.xpm
includes/: so_long.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_dlstadd_back.c  ft_dlstadd_front.c  ft_dlstfirst.c  ft_dlstlast.c  ft_dlstnew.c  ft_dlstsize.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  (+14 more)
maps/: 10x7.ber  8x4.ber  Missing player.ber  big.ber  big_bonus.ber  invalid map.ber  many_player.ber  maze.ber  no exit.ber  test1.ber  test3.ber  test4.ber  test5.ber  test6.ber  walls_error.ber  walls_error2.ber
sources/: so_long.c
srcs/: check_extension.c  check_map.c  close_window.c  ft_free.c  game_init.c  hook_functions.c  init_structure.c  map_draw.c  open_image.c  player_movement.c  rectangle  show_moves.c  so_long.c  so_long_test.c  store_map.c
